<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/contactDetailsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new_contact_frag_tv"
        android:visibility="visible"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactName"/>


    <EditText
        android:id="@+id/contactName"
        android:layout_width="0dp"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:hint="@string/name_et"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactSurname"
        />

    <EditText
        android:id="@+id/contactSurname"
        android:layout_width="0dp"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:hint="@string/surname_et"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/contactName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactPhoneNumber"
        />

    <EditText
        android:id="@+id/contactPhoneNumber"
        android:layout_width="0dp"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:hint="@string/phone_number_hint"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/contactSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancelAddingContactButton"
        />

    <Button
        android:id="@+id/addOrEditContactButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_contact_frag_btn"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/contactPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelAddingContactButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/cancelAddingContactButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/cancel_frag_btn"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/contactPhoneNumber"
        app:layout_constraintStart_toEndOf="@id/addOrEditContactButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>