<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/contactId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/id_tv"
        android:textSize="18sp"
        android:paddingStart="2dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactItemPhoneNumber"/>


    <TextView
        android:id="@+id/contactItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_surname_tv"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/contactId"
        app:layout_constraintEnd_toStartOf="@id/toBeDeletedCheckBox"/>

    <TextView
        android:id="@+id/contactItemPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/contactId"
        app:layout_constraintTop_toBottomOf="@id/contactItemName"
        app:layout_constraintBottom_toBottomOf="parent" />

    <CheckBox
        android:id="@+id/toBeDeletedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>